complete twitter html CSS assignment

--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
               </div>
               <div class="post_post shadow-lg ">
                 <i class="fas fa-user fs-3 left_mar "></i>Brie@Sktch_ComedyFan 3m <br>
-                 Giving standup comedy a go. Open mic starts at 7, hit me up if you want
-                 ticket <code class="text"> #heregoesnothing</code>
+                 Giving standup comedy a go. Open mic starts at 7, hit me up She is simple like a chmistry
+                  <code class="text"> #one_sided_love_feel</code>
                  <div class=" d-flex justify-content-around ">
-                  <i class="far fa-comment">15k</i>
-                  <i class="fas fa-retweet">4k</i>
-                  <i class="far fa-heart">30k</i>
+                  <i class="far fa-comment">15m</i>
+                  <i class="fas fa-retweet">4m</i>
+                  <i class="far fa-heart">30m</i>
                   <i class="fas fa-upload"></i>
                  </div><hr>
                  <div class="img_post">
-                  <i class="fas fa-user fs-3 left_mar"></i>one_side@Saira_lovely <br><br>
-                  <img src="./pic/img.jpg" class="img" alt="">
+                  <i class="fas fa-user fs-3 left_mar"></i>@Saira  <br><br>
+                  <img src="/12.png" class="img" alt="">
                   <div class=" d-flex justify-content-around">
-                    <i class="far fa-comment">15k</i>
-                    <i class="fas fa-retweet">4k</i>
-                    <i class="far fa-heart">30k</i>
+                    <i class="far fa-comment">1m</i>
+                    <i class="fas fa-retweet">4m</i>
+                    <i class="far fa-heart">30m</i>
                     <i class="fas fa-upload"></i>
                    </div><hr>
                  </div>
@@ -151,21 +151,21 @@
                   <div class="d-flex w-100 align-items-center justify-content-between">
                     <strong class="mb-1">#ZeeshanKhaliq</strong>
                   </div>
-                  <div class="col-10 mb-1 small">125K Tweets <br>
+                  <div class="col-10 mb-1 small">12m Tweets <br>
                     5,094 people are Tweeting about this</div>
                 </a>
                 <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
                   <div class="d-flex w-100 align-items-center justify-content-between">
                     <strong class="mb-1">#saylaniMassIt</strong>
                   </div>
-                  <div class="col-10 mb-1 small">125K Tweets <br>
+                  <div class="col-10 mb-1 small">12m Tweets <br>
                     5,094 people are Tweeting about this</div>
                 </a>
                 <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
                   <div class="d-flex w-100 align-items-center justify-content-between">
                     <strong class="mb-1">#bootstrap</strong>
                   </div>
-                  <div class="col-10 mb-1 small">125K Tweets <br>
+                  <div class="col-10 mb-1 small">12m Tweets <br>
                     5,094 people are Tweeting about this</div>
                 </a>
                 <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
